--- a/src/assets/scss/components/_about.scss
+++ b/src/assets/scss/components/_about.scss
@@ -1,6 +1,7 @@
 .about {
   width: 100%;
   margin-top: 12rem;
+  overflow: hidden;
   @include media(992px) {
      margin-top: 15rem;
   }
